add header/footer/btn pages html

--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -2,203 +2,204 @@
 <html lang="fr">
 
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/css/style.css">
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
-  rel="stylesheet">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <title>OhMyFood Menu de La Note Enchantée</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <title>OhMyFood Menu de La Note Enchantée</title>
 </head>
 
 <body>
- <!-- SECTION HEADER -->
- <header>
-  <div class="header_container">
-   <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
-  </div>
- </header>
- <main>
-  <!-- SECTION BANNER -->
-  <div>
-   <div class="banner_container">
-    <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat de la note enchantée">
-   </div>
-  </div>
-  <!-- SECTION MENU -->
-  <section>
-   <div class="menu_container">
+  <!-- SECTION HEADER -->
+  <header class="container">
+    <div class="header_container">
+      <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
+      <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
+    </div>
+  </header>
+  <main>
+    <!-- SECTION BANNER -->
     <div>
-     <h2 class="menu_title">La note enchantée</h2>
-     <i class="far fa-heart"></i>
+      <div class="banner_container">
+        <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat de la note enchantée"
+          class="banner_img">
+      </div>
     </div>
-    <div class="menu">
-     <!-- SECTION STARTER -->
-     <h3 class="menu_title-desc">Entrées</h3>
-     <div class="menu_starter">
-      <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='starter_1'>
-       <label for='starter_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Ravioles de foie gras </span>
-         <span class='plate_text'>Accompagnées de leur crème à la truffe</span>
-        </span>
-        <span class='plate_price'>25€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+    <!-- SECTION MENU -->
+    <section>
+      <div class="menu_container">
+        <div>
+          <h2 class="menu_title">La note enchantée</h2>
+          <i class="far fa-heart"></i>
+        </div>
+        <div class="menu">
+          <!-- SECTION STARTER -->
+          <h3 class="menu_title-desc">Entrées</h3>
+          <div class="menu_starter">
+            <div class="menu_starter-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='starter_1'>
+              <label for='starter_1'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Ravioles de foie gras </span>
+                  <span class='plate_text'>Accompagnées de leur crème à la truffe</span>
+                </span>
+                <span class='plate_price'>25€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_starter-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='starter_2'>
+              <label for='starter_2'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Caviar osciètre</span>
+                  <span class='plate_text'>Sur blini à la farine de blé noir</span>
+                </span>
+                <span class='plate_price'>35€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_starter-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='starter_3'>
+              <label for='starter_3'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Homard et espuma de potiron</span>
+                  <span class='plate_text'>Marinés aux zestes d'orange</span>
+                </span>
+                <span class='plate_price'>20€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_starter-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='starter_4'>
+              <label for='starter_4'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Foie gras de canard cuit entier</span>
+                  <span class='plate_text'>Confiture de figue et pain toasté</span>
+                </span>
+                <span class='plate_price'>35€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+          </div>
+          <!-- SECTION MAIN COURSE -->
+          <h3 class="menu_title-desc">Plats</h3>
+          <div class="menu_mainCourse">
+            <div class="menu_mainCourse-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_1'>
+              <label for='mainCourse_1'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Noix de coquilles Saint-Jacques</span>
+                  <span class='plate_text'>Sur lit de purée de céleri-rave</span>
+                </span>
+                <span class='plate_price'>40€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_2'>
+              <label for='mainCourse_2'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Langoustine poêlée</span>
+                  <span class='plate_text'>Purée de patate douce</span>
+                </span>
+                <span class='plate_price'>35€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_3'>
+              <label for='mainCourse_3'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Mijoté de queue de bœuf</span>
+                  <span class='plate_text'>Et riz sauvage aux zestes de citron</span>
+                </span>
+                <span class='plate_price'>44€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+          </div>
+          <!-- SECTION DESSERT -->
+          <h3 class="menu_title-desc">Desserts</h3>
+          <div class="menu_dessert">
+            <div class="menu_dessert-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_1'>
+              <label for='dessert_1'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Macaron noisette et chocolat</span>
+                  <span class='plate_text'>Glace au caramel brun et sel de Guérande</span>
+                </span>
+                <span class='plate_price'>18€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_dessert-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_2'>
+              <label for='dessert_2'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Baba au rhum revisité </span>
+                  <span class='plate_text'>Avec son coulis de citron</span>
+                </span>
+                <span class='plate_price'>22€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+            <div class="menu_dessert-choice">
+              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_3'>
+              <label for='dessert_3'>
+                <span class='plate_desc'>
+                  <span class="plate_title">Tarte au citron meringuée</span>
+                  <span class='plate_text'>Déstructurée</span>
+                </span>
+                <span class='plate_price'>23€</span>
+                <span class='plate_check'>
+                  <i class="fas fa-check-circle plate_check-ico"></i>
+                </span>
+              </label>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="btn_1">Commander</a>
       </div>
-      <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='starter_2'>
-       <label for='starter_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Caviar osciètre</span>
-         <span class='plate_text'>Sur blini à la farine de blé noir</span>
-        </span>
-        <span class='plate_price'>35€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='starter_3'>
-       <label for='starter_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Homard et espuma de potiron</span>
-         <span class='plate_text'>Marinés aux zestes d'orange</span>
-        </span>
-        <span class='plate_price'>20€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='starter_4'>
-       <label for='starter_4'>
-        <span class='plate_desc'>
-         <span class="plate_title">Foie gras de canard cuit entier</span>
-         <span class='plate_text'>Confiture de figue et pain toasté</span>
-        </span>
-        <span class='plate_price'>35€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-     </div>
-     <!-- SECTION MAIN COURSE -->
-     <h3 class="menu_title-desc">Plats</h3>
-     <div class="menu_mainCourse">
-      <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_1'>
-       <label for='mainCourse_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Noix de coquilles Saint-Jacques</span>
-         <span class='plate_text'>Sur lit de purée de céleri-rave</span>
-        </span>
-        <span class='plate_price'>40€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_2'>
-       <label for='mainCourse_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Langoustine poêlée</span>
-         <span class='plate_text'>Purée de patate douce</span>
-        </span>
-        <span class='plate_price'>35€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_3'>
-       <label for='mainCourse_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Mijoté de queue de bœuf</span>
-         <span class='plate_text'>Et riz sauvage aux zestes de citron</span>
-        </span>
-        <span class='plate_price'>44€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-     </div>
-     <!-- SECTION DESSERT -->
-     <h3 class="menu_title-desc">Desserts</h3>
-     <div class="menu_dessert">
-      <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='dessert_1'>
-       <label for='dessert_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Macaron noisette et chocolat</span>
-         <span class='plate_text'>Glace au caramel brun et sel de Guérande</span>
-        </span>
-        <span class='plate_price'>18€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='dessert_2'>
-       <label for='dessert_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Baba au rhum revisité </span>
-         <span class='plate_text'>Avec son coulis de citron</span>
-        </span>
-        <span class='plate_price'>22€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-      <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_la_note_enchantee' id='dessert_3'>
-       <label for='dessert_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Tarte au citron meringuée</span>
-         <span class='plate_text'>Déstructurée</span>
-        </span>
-        <span class='plate_price'>23€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
-      </div>
-     </div>
-    </div>
-    <a href="#">Commander</a>
-   </div>
-  </section>
+    </section>
 
- </main>
- <!-- SECTION FOOTER -->
- <footer>
-  <div class="footer_container">
-   <ul>
-    <li>
-     <h5 class="footer_title">ohmyfood</h5>
-    </li>
-    <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
-    <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
-    <li><a href="#" class="footer_link">Mentions légales</a></li>
-    <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
-   </ul>
-  </div>
- </footer>
+  </main>
+  <!-- SECTION FOOTER -->
+  <footer class="footer">
+    <div class="footer_container container">
+      <ul class="footer_flex">
+        <li>
+          <h5 class="footer_title">ohmyfood</h5>
+        </li>
+        <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
+        <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
+        <li><a href="#" class="footer_link">Mentions légales</a></li>
+        <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
+      </ul>
+    </div>
+  </footer>
 
 </body>
 
