--- a/html/le_delice_des_sens.html
+++ b/html/le_delice_des_sens.html
@@ -16,9 +16,9 @@
 
 <body>
   <!-- SECTION HEADER -->
-  <header>
+  <header class="container">
     <div class="header_container">
-      <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+      <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
       <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
     </div>
   </header>
@@ -27,7 +27,7 @@
     <div>
       <div class="banner_container">
         <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-          alt="photo d'un plat le délice des sens">
+          alt="photo d'un plat le délice des sens" class="banner_img">
       </div>
     </div>
     <!-- SECTION MENU -->
@@ -168,15 +168,15 @@
             </div>
           </div>
         </div>
-        <a href="#">Commander</a>
+        <a href="#" class="btn_1">Commander</a>
       </div>
     </section>
 
   </main>
   <!-- SECTION FOOTER -->
-  <footer>
-    <div class="footer_container">
-      <ul>
+  <footer class="footer">
+    <div class="footer_container container">
+      <ul class="footer_flex">
         <li>
           <h5 class="footer_title">ohmyfood</h5>
         </li>
