--- a/html/la_palette_du_gout.html
+++ b/html/la_palette_du_gout.html
@@ -16,9 +16,9 @@
 
 <body>
  <!-- SECTION HEADER -->
- <header>
+ <header class="container">
   <div class="header_container">
-   <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+   <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
    <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
   </div>
  </header>
@@ -26,15 +26,17 @@
   <!-- SECTION BANNER -->
   <div>
    <div class="banner_container">
-    <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat de la palette du gout">
+    <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat de la palette du gout"
+     class="banner_img">
    </div>
   </div>
   <!-- SECTION MENU -->
   <section>
    <div class="menu_container">
-    <div>
+    <div class="menu_intro">
      <h2 class="menu_title">La palette du gout</h2>
-     <i class="far fa-heart"></i>
+     <i class="far fa-heart heart_empty-page"></i>
+     <i class="fas fa-heart heart_full-page"></i>
     </div>
     <div class="menu">
      <!-- SECTION STARTER -->
@@ -167,15 +169,15 @@
       </div>
      </div>
     </div>
-    <a href="#">Commander</a>
+    <a href="#" class="btn_1">Commander</a>
    </div>
   </section>
 
  </main>
  <!-- SECTION FOOTER -->
- <footer>
-  <div class="footer_container">
-   <ul>
+ <footer class="footer">
+  <div class="footer_container container">
+   <ul class="footer_flex">
     <li>
      <h5 class="footer_title">ohmyfood</h5>
     </li>
