--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  </div>
  <!-- SECTION HEADER -->
  <header>
-  <div class="header_container">
+  <div class="header_container header_shadow">
    <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
   </div>
  </header>
